# thesis-os

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  thesis_os_revised_plan.md
app/: brief.py  changes.py  config.py  coverage.py  crud.py  data.py  db.py  export.py  extraction.py  flow.py  main.py  prompts.py  qualitative.py  quant.py  templates.py  thesis.py
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CitationTooltip.tsx  Layout.tsx  SectionHeader.tsx  StatusLight.tsx  TickerInput.tsx
frontend/src/lib/: api.ts  format.ts  mock-brief-crm.json  types.ts
frontend/src/pages/: BriefPage.tsx  FeedPage.tsx  ThesisPage.tsx
migrations/: env.py
migrations/versions/: a3f8b1d9c742_add_session9_columns.py  e2613a6c2ebb_initial_schema.py
